--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1 {
   background: #404040;
   color: #c6c6c6;
   font-size: 29px;
+  padding: 20px;
 }
 .input-max {
   width: 342px;
@@ -48,6 +49,7 @@ h1 {
   color: #c6c6c6;
   font-size: 29px;
   margin-left: 40px;
+  padding: 20px;
 }
 .button-div {
   display: flex;
@@ -64,4 +66,9 @@ button {
   font-size: 29px;
   box-shadow: 0px 18px 40px 0px #aec34659;
   cursor: pointer;
+}
+@media (max-width: 900px) {
+  input {
+    width: 10px;
+  }
 }
